# weezterm

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  weezterm_build.yml  weezterm_windows.yml
assets/: weezterm.appdata.xml  weezterm.desktop
assets/shell-integration/: weezterm.sh
ci/: appimage.sh  build-cross.sh  deploy.sh  windows-installer.iss
codec/src/: lib.rs
config/src/: branding.rs  config.rs  devcontainer.rs  keyassignment.rs  lib.rs  lua.rs  monitor.rs  ssh.rs  unix.rs
docs/: remote-extensions.md  ssh.md
mux/: Cargo.toml
mux/src/: connui.rs  devcontainer.rs  lib.rs  (+9 more)
nix/: flake.nix
wezterm/: Cargo.toml
wezterm-client/: Cargo.toml
wezterm-gui/: Cargo.toml  build.rs
wezterm-mux-server/: Cargo.toml
wezterm-version/: Cargo.toml  build.rs
wezterm-version/src/: lib.rs
(+75 files in other folders)
