[package]
name = "wezterm-version"
# --- weezterm remote features ---
# This is the single source of truth for the WeezTerm version.
# Dev builds append "-dev.YYYYMMDD.HASH"; tagged release builds use this as-is.
version = "0.2.0"
# --- end weezterm remote features ---
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
git2 = { workspace=true, default-features = false }

[dependencies]
